src/test/deca/syntax/invalid/parser/float-mix.deca
// Description:
//    Test invalide du parseur.
//
// Resultats:
//    erreur ligne 7

3xac.BD0p-4f
